--- a/orderplace.html
+++ b/orderplace.html
@@ -105,7 +105,10 @@
     </style>
 </head>
 <body>
-    <center><button class="show-button" id="co" onclick="cod()">Cash On Delivery (COD)</button></center>
+   <center><button class="show-button" id="co" onclick="cod()">UPI</button>
+    <button class="show-button" id="co" onclick="cod()">Debit card</button>
+    <button class="show-button" id="co" onclick="cod()">Credit card</button>
+    <button class="show-button" id="co" onclick="cod()">Cash On Delivery (COD)</button></center>
     <div id="cod" style="display: none;">
         <center><img src="./oops.jpg" alt="Oops Image"></center>
         <center><h1>Your Order Has Been Placed......!</h1></center>
