--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div id="cart">
             <div class="taste-header">
                 <div class="user">
-                   <a href="./login.html"><i class="fa fa-user-circle" id="circle"> Account</i></a>
+                   <a href="./login.html"><i class="fa fa-sign-in" id="circle"> Signup</i></a>
                     
                 </div>
             </div>
@@ -158,7 +158,7 @@
             <a href="./index.html"><p>Home</p></a>
             <a href="./about.html">About</a>
             <a href="./services.html">Services</a>
-           <a href="./login.html"><p>Account</p></a>
+           <a href="./login.html"><p>Signup</p></a>
         </div>
     </div>
     <script src="./script.js" type="module"></script>
