--- a/orderplace.html
+++ b/orderplace.html
@@ -149,7 +149,7 @@
     </div></center>
 
     <div id="cod" style="display: none;">
-        <center><img src="./oops.jpg" alt="Oops Image"></center>
+        <center><img src="./cute-adorable.gif" alt="Oops Image"></center>
         <center><h1>Your Order Has Been Placed......!</h1></center>
         <center><h1 id="thank">Thank You for Choosing Lungi Mama's</h1></center>
         <center><h2 id="payment-method"></h2></center>
